Ensure that correct jaxb stuff is used for tessera config. Test st Command level to test data and config migration togther. Added mechanism to add fixtures to validate migration results from tests (rather than calling tessera service to validate results. Do count check post migration.